# cmake_tutorial

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt  Main.cpp  print_lib.cpp  print_lib.hpp
test/: CMakeLists.txt  test.cpp
